more outlier studies

--- a/code/notebook_bruno.ipynb
+++ b/code/notebook_bruno.ipynb
@@ -5704,399 +5704,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>originalTitle</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>startYear</th>\n",
-       "      <th>endYear</th>\n",
-       "      <th>runtimeMinutes</th>\n",
-       "      <th>awardWins</th>\n",
-       "      <th>numVotes</th>\n",
-       "      <th>worstRating</th>\n",
-       "      <th>bestRating</th>\n",
-       "      <th>totalImages</th>\n",
-       "      <th>...</th>\n",
-       "      <th>titleType</th>\n",
-       "      <th>awardNominationsExcludeWins</th>\n",
-       "      <th>canHaveEpisodes</th>\n",
-       "      <th>isRatable</th>\n",
-       "      <th>isAdult</th>\n",
-       "      <th>numRegions</th>\n",
-       "      <th>userReviewsTotal</th>\n",
-       "      <th>ratingCount</th>\n",
-       "      <th>countryOfOrigin</th>\n",
-       "      <th>genres</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Neogenic Nightmare Chapter 3: Hydro-Man</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>779</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>tvEpisode</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>781</td>\n",
-       "      <td>[US]</td>\n",
-       "      <td>[Action, Adventure, Animation]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Looping</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1982</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>videoGame</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>[XWG]</td>\n",
-       "      <td>[Action]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Idealnaya para</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>38</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>38</td>\n",
-       "      <td>[RU]</td>\n",
-       "      <td>[Comedy]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>MasterChef Celebrity México</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>22</td>\n",
-       "      <td>...</td>\n",
-       "      <td>tvSeries</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15</td>\n",
-       "      <td>[MX]</td>\n",
-       "      <td>[Reality-TV]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Nanba MG5</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>7</td>\n",
-       "      <td>...</td>\n",
-       "      <td>tvMiniSeries</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>[JP]</td>\n",
-       "      <td>[Comedy]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16425</th>\n",
-       "      <td>A Woman of Substance</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1984</td>\n",
-       "      <td>1984.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1157</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>13</td>\n",
-       "      <td>...</td>\n",
-       "      <td>tvMiniSeries</td>\n",
-       "      <td>3</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0</td>\n",
-       "      <td>21</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1157</td>\n",
-       "      <td>[GB]</td>\n",
-       "      <td>[Drama, Romance]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16426</th>\n",
-       "      <td>Caprices</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1942</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>73</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>4</td>\n",
-       "      <td>73</td>\n",
-       "      <td>[FR]</td>\n",
-       "      <td>[Comedy]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16427</th>\n",
-       "      <td>Haar Jeet</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "      <td>[IN]</td>\n",
-       "      <td>[Action, Drama, Thriller]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16429</th>\n",
-       "      <td>Ator l'invincibile</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1982</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3011</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>52</td>\n",
-       "      <td>...</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0</td>\n",
-       "      <td>26</td>\n",
-       "      <td>58</td>\n",
-       "      <td>3012</td>\n",
-       "      <td>[IT]</td>\n",
-       "      <td>[Action, Adventure, Fantasy]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16430</th>\n",
-       "      <td>Anniversary Night</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>7</td>\n",
-       "      <td>...</td>\n",
-       "      <td>short</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>[IN]</td>\n",
-       "      <td>[Drama, Short]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4852 rows × 23 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                 originalTitle  rating  startYear  endYear  \\\n",
-       "0      Neogenic Nightmare Chapter 3: Hydro-Man       8       1995      NaN   \n",
-       "1                                      Looping       6       1982      NaN   \n",
-       "2                               Idealnaya para       6       1992      NaN   \n",
-       "3                  MasterChef Celebrity México       6       2021      NaN   \n",
-       "7                                    Nanba MG5       8       2022      NaN   \n",
-       "...                                        ...     ...        ...      ...   \n",
-       "16425                     A Woman of Substance       8       1984   1984.0   \n",
-       "16426                                 Caprices       6       1942      NaN   \n",
-       "16427                                Haar Jeet       5       1990      NaN   \n",
-       "16429                       Ator l'invincibile       4       1982      NaN   \n",
-       "16430                        Anniversary Night      10       2022      NaN   \n",
-       "\n",
-       "       runtimeMinutes  awardWins  numVotes  worstRating  bestRating  \\\n",
-       "0                 NaN        0.0       779            1          10   \n",
-       "1                 NaN        0.0        11            1          10   \n",
-       "2                 NaN        0.0        38            1          10   \n",
-       "3                 NaN        0.0        15            1          10   \n",
-       "7                 NaN        0.0        70            1          10   \n",
-       "...               ...        ...       ...          ...         ...   \n",
-       "16425             NaN        0.0      1157            1          10   \n",
-       "16426             NaN        0.0        73            1          10   \n",
-       "16427             NaN        0.0        15            1          10   \n",
-       "16429             NaN        0.0      3011            1          10   \n",
-       "16430             NaN        0.0         9            1          10   \n",
-       "\n",
-       "       totalImages  ...     titleType  awardNominationsExcludeWins  \\\n",
-       "0                1  ...     tvEpisode                            0   \n",
-       "1                1  ...     videoGame                            0   \n",
-       "2                1  ...         movie                            0   \n",
-       "3               22  ...      tvSeries                            0   \n",
-       "7                7  ...  tvMiniSeries                            0   \n",
-       "...            ...  ...           ...                          ...   \n",
-       "16425           13  ...  tvMiniSeries                            3   \n",
-       "16426            4  ...         movie                            0   \n",
-       "16427            2  ...         movie                            0   \n",
-       "16429           52  ...         movie                            0   \n",
-       "16430            7  ...         short                            0   \n",
-       "\n",
-       "       canHaveEpisodes isRatable  isAdult  numRegions  userReviewsTotal  \\\n",
-       "0                False      True        0           1                 0   \n",
-       "1                False      True        0           1                 0   \n",
-       "2                False      True        0           1                 1   \n",
-       "3                 True      True        0           1                 0   \n",
-       "7                 True      True        0          14                 0   \n",
-       "...                ...       ...      ...         ...               ...   \n",
-       "16425             True      True        0          21                22   \n",
-       "16426            False      True        0          14                 4   \n",
-       "16427            False      True        0           1                 1   \n",
-       "16429            False      True        0          26                58   \n",
-       "16430            False      True        0           1                 0   \n",
-       "\n",
-       "       ratingCount  countryOfOrigin                          genres  \n",
-       "0              781             [US]  [Action, Adventure, Animation]  \n",
-       "1               11            [XWG]                        [Action]  \n",
-       "2               38             [RU]                        [Comedy]  \n",
-       "3               15             [MX]                    [Reality-TV]  \n",
-       "7               70             [JP]                        [Comedy]  \n",
-       "...            ...              ...                             ...  \n",
-       "16425         1157             [GB]                [Drama, Romance]  \n",
-       "16426           73             [FR]                        [Comedy]  \n",
-       "16427           15             [IN]       [Action, Drama, Thriller]  \n",
-       "16429         3012             [IT]    [Action, Adventure, Fantasy]  \n",
-       "16430            9             [IN]                  [Drama, Short]  \n",
-       "\n",
-       "[4852 rows x 23 columns]"
+       "titleType\n",
+       "movie           1225\n",
+       "short            582\n",
+       "tvEpisode       1469\n",
+       "tvMiniSeries     120\n",
+       "tvMovie          212\n",
+       "tvSeries         676\n",
+       "tvShort            1\n",
+       "tvSpecial         72\n",
+       "video            238\n",
+       "videoGame        257\n",
+       "Name: originalTitle, dtype: int64"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df.loc[train_df['runtimeMinutes'].isna()]"
+    "train_df.loc[\n",
+    "                train_df['runtimeMinutes'].isna()\n",
+    "            ].groupby('titleType').count()['originalTitle']"
    ]
   },
   {
