--- a/report_data_semantics/capitolo1.tex
+++ b/report_data_semantics/capitolo1.tex
@@ -111,17 +111,10 @@ All the variables of the dataset are introduced and explained in Table 1.1 and T
 \end{table}
 \section{Distribution of the variables and statistics}\label{sec:variable_distrib}
 \subsection{Discrete attributes}
-...content...
-...content...
-...content...
-...content...
-...content...
-...content...
-...content...
-...content...
-...content...
-...content...
-
+In this paragraph, we examine the most informative discrete attributes of the dataset to provide an overview of their statistics and frequencies.
+From Fig.1(a), we observe that the classes of the \textit{titleType} attribute are unbalanced, with \textit{movie} being the most frequent class (5535 records) and \textit{tvShort} the least frequent (40 records). By analyzing the \textit{canHaveEpisodes} attribute within these \textit{titleType} values, we found out that only \textit{tvSeries} and \textit{tvMiniSeries} can have episodes, as expected.
+As shown in Fig.1(b), the frequency of rating classes is skewed toward higher values. The most frequent rating class is (7, 8], which is the rating of 4822 titles.
+Another important aspect is that all 16341 titles are ratable and the vast majority of them (16005) are non-adults contents, as shown in Fig.1(c)
 \subsection{Continuous attributes}
 ...content...
 ...content...
