subfigure package added
subfigure package added

--- a/report_data_semantics/main.tex
+++ b/report_data_semantics/main.tex
@@ -39,6 +39,7 @@
 
 
 \usepackage{graphicx} % inserimento di immagini
+\usepackage{subfigure}
 \usepackage{csquotes} % per le citazioni "in blocco"
 %\usepackage[backend=biber, sorting=nty, ]{biblatex} % bibliografia con pacchetto biblatex (https://ctan.org/pkg/biblatex?lang=en)
 \appto{\bibsetup}{\raggedright}
