--- a/report_data_semantics/capitolo1.tex
+++ b/report_data_semantics/capitolo1.tex
@@ -36,7 +36,7 @@
 % Sottosezione 1...
 
 \section{Data Semantics}\label{sec:data_semantics}
-The dataset \textit{complete\_df.csv}, which is the merge of the original \textit{train.csv} and \textit{test.csv} datasets, contains 21909 titles of different forms of visual entertainment that have been rated on IMDb, an online database of information related to films, television series etc. 
+The dataset \textit{train.csv} contains 16431 titles of different forms of visual entertainment that have been rated on IMDb, an online database of information related to films, television series etc. 
 Each record is described by 23 attributes, both numerical and non-numerical. 
 All the variables of the dataset are introduced and explained in Table 1.1 and Table 1.2.
 \begin{table}[h]
@@ -114,21 +114,26 @@ All the variables of the dataset are introduced and explained in Table 1.1 and T
 In this paragraph, we examine the most informative discrete attributes of the dataset to provide an overview of their statistics and frequencies. 
 \\From Fig.1.1(a), we observe that the classes of the \textit{titleType} attribute are unbalanced, with \textit{movie} being the most frequent class (5535 records) and \textit{tvShort} the least frequent (40 records). By analyzing the \textit{canHaveEpisodes} attribute within these \textit{titleType} values, we found out that only \textit{tvSeries} and \textit{tvMiniSeries} can have episodes, as expected.
 \\As shown in Fig.1.1(b), the frequency of rating classes is skewed toward higher values. The most frequent rating class is (7, 8], which is the rating of 4822 titles.
-\\Another important aspect is that all 16341 titles are ratable and the vast majority of them (16005) are non-adults contents, as shown in Fig.1.1(c).
+\\Another important aspect is that all 16341 titles are ratable and the vast majority of them (16005) are non-adults contents, as shown in Fig.1.1(c)
+\\Finally, as shown in Fig.1.1(d), when analyzing the \textit{genres} variable across different \textit{titleType} values, we observe that \textit{Drama} and \textit{Comedy} are the most common genres. This is because they appear in nearly every \textit{titleType} category.
 \begin{figure}[h!]
     \centering
-    \subfigure[(a)]{
+    \subfigure[]{
         \includegraphics[width=0.45\textwidth]{plots/fig1_a.png} % Replace with your plot
         }
-    \subfigure[(b)]{
+    \subfigure[]{
         \includegraphics[width=0.45\textwidth]{plots/fig1_b.png}
         }
-    \subfigure[(c)]{
+    \subfigure[]{
         \includegraphics[width=0.45\textwidth]{plots/fig1_c.png}
         }
-    \caption{Bar chart of the discrete attributes: (a): counting of the title types frequencies combined with the canHaveEpisodes variable (b): counting of ratings frequencies (c): counting of the adult and non-adult frequencies combined with the isRatable attribute.}
+        \subfigure[]{
+        \includegraphics[width=0.45\textwidth]{plots/fig1_d.png} % Replace with your plot
+        }
+    \caption{Bar chart of the discrete attributes: (a): counting of the title types frequencies combined with the canHaveEpisodes variable; (b): counting of ratings frequencies; (c): counting of the adult and non-adult frequencies combined with the isRatable attribute; (d) top 3 genres according to the titleType.}
     \label{fig:bar-charts}
 \end{figure}
+
 \subsection{Continuous attributes}
 ...content...
 ...content...
