--- a/report_data_semantics/capitolo1.tex
+++ b/report_data_semantics/capitolo1.tex
@@ -115,7 +115,7 @@ In this paragraph, we examine the most informative discrete attributes of the da
 \\From Fig.1.1(a), we observe that the classes of the \textit{titleType} attribute are unbalanced, with \textit{movie} being the most frequent class (5535 records) and \textit{tvShort} the least frequent (40 records). By analyzing the \textit{canHaveEpisodes} attribute within these \textit{titleType} values, we found out that only \textit{tvSeries} and \textit{tvMiniSeries} can have episodes, as expected.
 \\As shown in Fig.1.1(b), the frequency of rating classes is skewed toward higher values. The most frequent rating class is (7, 8], which is the rating of 4822 titles.
 \\Another important aspect is that all 16341 titles are ratable and the vast majority of them (16005) are non-adults contents, as shown in Fig.1.1(c)
-\\Finally, as shown in Fig.1.1(d), when analyzing the \textit{genres} variable across different \textit{titleType} values, we observe that \textit{Drama} and \textit{Comedy} are the most common genres. This is because they appear in nearly every \textit{titleType} category.
+\\Finally, as shown in Fig.1.1(d), when analyzing the \textit{genres} variable across different \textit{titleType} values, we observe that \textit{Drama} and \textit{Comedy} are the most common genres. This is because they appear in the top 3 genres of nearly every \textit{titleType} category.
 \begin{figure}[h!]
     \centering
     \subfigure[]{
