--- a/code/data_quality_noemi.ipynb
+++ b/code/data_quality_noemi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "id": "27c417e2",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "id": "492f5eaa",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
        "[16431 rows x 23 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "id": "6b7e5e06",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "id": "0c8222c6",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
        "0"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "id": "5acc4760",
    "metadata": {},
    "outputs": [],
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "id": "9bed97a6",
    "metadata": {},
    "outputs": [],
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "id": "5f96567f",
    "metadata": {},
    "outputs": [],
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "id": "4a91a4d4",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 29,
    "id": "8a0df4f4",
    "metadata": {},
    "outputs": [
@@ -594,7 +594,7 @@
        "pandas._libs.missing.NAType"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 30,
    "id": "b7c61839",
    "metadata": {},
    "outputs": [
@@ -616,7 +616,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\noemi\\AppData\\Local\\Temp\\ipykernel_17448\\3263650284.py:3: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "C:\\Users\\noemi\\AppData\\Local\\Temp\\ipykernel_14908\\3263650284.py:3: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
       "  if  r\"\\N\" in train_df[colonna].values:\n"
      ]
     }
@@ -631,13 +631,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 31,
    "id": "b5a782a3",
    "metadata": {},
    "outputs": [],
    "source": [
     "#uniformo assegnando NaN a tutti i valori nulli\n",
     "for col in num_cols:\n",
+    "    #Converts the values in column col to numeric types (e.g., int, float). \n",
+    "    # #If a value cannot be converted  (e.g., invalid strings), it is replaced with NaN (missing value).\n",
     "    train_df[col] = pd.to_numeric(train_df[col], errors='coerce')\n",
     "\n",
     "    #abbiamo trasformato i valori numerici in interi e non float (con Int64 accetta i Nan)\n",
@@ -648,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "id": "c427c64f",
    "metadata": {},
    "outputs": [
@@ -681,7 +683,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 33,
    "id": "fad2f0e6",
    "metadata": {},
    "outputs": [
@@ -752,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "id": "ccdc202d",
    "metadata": {},
    "outputs": [
@@ -793,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 35,
    "id": "4ed3bb0c",
    "metadata": {},
    "outputs": [
@@ -812,7 +814,7 @@
        "Length: 1, dtype: Int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 36,
    "id": "0ec69ab0",
    "metadata": {},
    "outputs": [
@@ -848,7 +850,7 @@
        "Name: originalTitle, dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 37,
    "id": "7fc4d89e",
    "metadata": {},
    "outputs": [
@@ -889,8 +891,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27e17332",
+   "metadata": {},
+   "source": [
+    "TITOLI RIPETUTI: quante volte titolo x si ripete"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 38,
    "id": "7d4c86a1",
    "metadata": {},
    "outputs": [
@@ -912,21 +922,21 @@
        "Name: count, Length: 16054, dtype: int64"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "valori_ripetuti = train_df['originalTitle'].value_counts()\n",
     "valori_ripetuti \n",
-    "#valori_ripetuti[330:335]\n",
-    "#quante volte titolo x si ripete"
+    "#valori_ripetuti[330:335]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 39,
    "id": "aa6501a9",
    "metadata": {},
    "outputs": [
@@ -938,7 +948,7 @@
        "      dtype='int64')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 40,
    "id": "1407ef45",
    "metadata": {},
    "outputs": [
@@ -1540,7 +1550,7 @@
        "[18 rows x 23 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
