--- a/report_data_semantics/capitolo1.tex
+++ b/report_data_semantics/capitolo1.tex
@@ -130,21 +130,16 @@ In this paragraph, we examine the most informative discrete attributes of the da
         \subfigure[]{
         \includegraphics[width=0.45\textwidth]{plots/fig1_d.png} % Replace with your plot
         }
-    \caption{Bar chart of the discrete attributes: (a): counting of the title types frequencies combined with the canHaveEpisodes variable; (b): counting of ratings frequencies; (c): counting of the adult and non-adult frequencies combined with the isRatable attribute; (d) top 3 genres according to the titleType.}
+    \caption{Bar chart of the discrete attributes: (a): counting of the title
+    types frequencies combined with the canHaveEpisodes variable;
+    (b): counting of ratings frequencies;
+    (c): counting of the adult and non-adult frequencies combined with the
+    isRatable attribute;
+    (d) top 3 genres according to the titleType.}
     \label{fig:bar-charts}
 \end{figure}
 
 \subsection{Continuous attributes}
-...content...
-...content...
-...content...
-...content...
-...content...
-...content...
-...content...
-...content...
-...content...
-...content...
 
 
 \end{document}
