--- a/code/hierarchical_clustering.ipynb
+++ b/code/hierarchical_clustering.ipynb
@@ -2,10 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('dm1_dataset_2425_imdb/train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['originalTitle', 'rating', 'startYear', 'endYear', 'runtimeMinutes',\n",
+       "       'awardWins', 'numVotes', 'worstRating', 'bestRating', 'totalImages',\n",
+       "       'totalVideos', 'totalCredits', 'criticReviewsTotal', 'titleType',\n",
+       "       'awardNominationsExcludeWins', 'canHaveEpisodes', 'isRatable',\n",
+       "       'isAdult', 'numRegions', 'userReviewsTotal', 'ratingCount',\n",
+       "       'countryOfOrigin', 'genres'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.cluster import AgglomerativeClustering\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +58,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.1"
   }
  },
