--- a/code/hierarchical_clustering.ipynb
+++ b/code/hierarchical_clustering.ipynb
@@ -34,6 +34,11 @@
     }
    ],
    "source": [
+    "# possible useful columns for this task:\n",
+    "# rating, startYear, runtimeMinutes, awardWins, numVotes,\n",
+    "# totalImages, totalVideos, totalCredits, criticReviewsTotal,\n",
+    "# awardNominationsExcludeWins, canHaveEpisodes (?), isAdult,\n",
+    "# \n",
     "df.columns"
    ]
   },
