--- a/report_data_semantics/capitolo1.tex
+++ b/report_data_semantics/capitolo1.tex
@@ -87,26 +87,62 @@ By analyzing the \texttt{canHaveEpisodes} attribute within these \texttt{titleTy
 As shown in Fig.1.1(b), the frequency of rating classes is slighly skewed toward higher values, with the most frequent rating class being (7, 8], which is the rating of 4822 titles.
 Another important aspect is that all 16341 titles are ratable and the vast majority of them (16005) are non-adults contents, as shown in Fig.1.1(c)
 Finally, as indicated in Fig.1.1(d), an analysis of the \texttt{genres} variable across different \texttt{titleType} values reveals that \textit{Drama} and \textit{Comedy} are the most common genres, as they appear in the top 3 genres of nearly every \textit{titleType} category.
-\begin{figure}[h!]
+% \begin{figure}[h!]
+%     \centering
+%     \begin{subfigure}[b]{0.45\textwidth}
+%         \includegraphics[width=\textwidth]{plots/fig1_a.png}
+%         \caption{Counting of the title types frequencies combined with the canHaveEpisodes variable}
+%         \label{fig:sub1}
+%     \end{subfigure}
+%     \subfigure[]{
+%         \includegraphics[width=0.45\textwidth]{plots/fig1_b.png}
+%     }
+%     \subfigure[]{
+%         \includegraphics[width=0.45\textwidth]{plots/fig1_c.png}
+%     }
+%     \subfigure[]{
+%         \includegraphics[width=0.45\textwidth]{plots/fig1_d.png} 
+%     }
+%     \caption{Bar chart of the discrete attributes
+%     (b): counting of ratings frequencies;
+%     (c): counting of the adult and non-adult frequencies combined with the
+%     isRatable attribute;
+%     (d) top 3 genres according to the titleType.}
+%     \label{fig:bar-charts}
+% \end{figure}
+
+
+\begin{figure}[H]
     \centering
-    \subfigure[]{
-        \includegraphics[width=0.45\textwidth]{plots/fig1_a.png} 
-        }
-    \subfigure[]{
-        \includegraphics[width=0.45\textwidth]{plots/fig1_b.png}
-        }
-    \subfigure[]{
-        \includegraphics[width=0.45\textwidth]{plots/fig1_c.png}
-        }
-    \subfigure[]{
-        \includegraphics[width=0.45\textwidth]{plots/fig1_d.png} 
-        }
-    \caption{Bar chart of the discrete attributes: (a): counting of the title
-    types frequencies combined with the canHaveEpisodes variable;
-    (b): counting of ratings frequencies;
-    (c): counting of the adult and non-adult frequencies combined with the
-    isRatable attribute;
-    (d) top 3 genres according to the titleType.}
+    % First subfigure
+    \begin{subfigure}{0.45\textwidth}
+        \includegraphics[width=\textwidth]{plots/fig1_a.png}
+        \caption{Counting of the title types frequencies} %  combined with the canHaveEpisodes variable
+        \label{fig:sub1}
+    \end{subfigure}
+    \hfill
+    % Second subfigure
+    \begin{subfigure}{0.45\textwidth}
+        \includegraphics[width=\textwidth]{plots/fig1_b.png}
+        \caption{Counting of ratings frequencies}
+        \label{fig:sub2}
+    \end{subfigure}
+    
+    % Third subfigure
+    \begin{subfigure}{0.45\textwidth}
+        \includegraphics[width=\textwidth]{plots/fig1_c.png}
+        \caption{Counting of the adult and non-adult per type}
+        \label{fig:sub3}
+    \end{subfigure}
+    \hfill
+    % Fourth subfigure
+    \begin{subfigure}{0.45\textwidth}
+        \includegraphics[width=\textwidth]{plots/fig1_d.png}
+        \caption{Top 3 genres according to the titleType}
+        \label{fig:sub4}
+    \end{subfigure}
+    
+    \caption{Bar chart of the discrete attributes.}
     \label{fig:bar-charts}
 \end{figure}
 
@@ -134,7 +170,3 @@ Once having solved the above-mentioned inconsistency, the resulting total amount
 
     \item \texttt{genres}: it is 382 missing values (2.3\%). Having dealt this variable with a multi-label one-hot encoding process (as will be described in the \textit{Variable Transformation} section), a vector of all zeros is assigned to record with missing genres values.
 \end{itemize}
-
-
-
-\end{document}
