change to graphs

--- a/code/hierarchical_clustering.ipynb
+++ b/code/hierarchical_clustering.ipynb
@@ -38,7 +38,8 @@
     "# rating, startYear, runtimeMinutes, awardWins, numVotes,\n",
     "# totalImages, totalVideos, totalCredits, criticReviewsTotal,\n",
     "# awardNominationsExcludeWins, canHaveEpisodes (?), isAdult,\n",
-    "# \n",
+    "# numRegions, userReviewsTotal, ratingCount,\n",
+    "# genres (as 1henc or as a count?)\n",
     "df.columns"
    ]
   },
@@ -48,11 +49,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "from sklearn.cluster import AgglomerativeClustering\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
-    "\n"
+    "model = AgglomerativeClustering(n_clusters=2, linkage='ward')\n",
+    "model.fit(df)   # TODO\n",
+    "\n",
+    "print(\"Cluster labels:\", model.labels_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DATA POINTS PLOT\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Plotting the points with their cluster labels\n",
+    "# plt.scatter(X[:, 0], X[:, 1], c=model.labels_, cmap='viridis', s=50)\n",
+    "# plt.title(\"Clusters from Hierarchical Clustering\")\n",
+    "# plt.xlabel(\"Feature 1\")\n",
+    "# plt.ylabel(\"Feature 2\")\n",
+    "# plt.colorbar(label=\"Cluster Label\")\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DENDROGRAM\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.cluster.hierarchy import dendrogram, linkage\n",
+    "\n",
+    "# Linkage matrix for hierarchical clustering\n",
+    "Z = linkage(X, method='ward')\n",
+    "\n",
+    "# Plotting the dendrogram\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "dendrogram(Z)\n",
+    "plt.title(\"Dendrogram\")\n",
+    "plt.xlabel(\"Data Points\")\n",
+    "plt.ylabel(\"Distance\")\n",
+    "plt.show()"
    ]
   }
  ],
