--- a/report_data_semantics/capitolo1.tex
+++ b/report_data_semantics/capitolo1.tex
@@ -89,19 +89,19 @@ Another important aspect is that all 16341 titles are ratable and the vast major
 Finally, as indicated in Fig.1.1(d), an analysis of the \texttt{genres} variable across different \texttt{titleType} values reveals that \textit{Drama} and \textit{Comedy} are the most common genres, as they appear in the top 3 genres of nearly every \textit{titleType} category.
 % \begin{figure}[h!]
 %     \centering
-%     \begin{subfigure}[b]{0.45\textwidth}
+%     \begin{subfigure}[b]{0.48\textwidth}
 %         \includegraphics[width=\textwidth]{plots/fig1_a.png}
 %         \caption{Counting of the title types frequencies combined with the canHaveEpisodes variable}
 %         \label{fig:sub1}
 %     \end{subfigure}
 %     \subfigure[]{
-%         \includegraphics[width=0.45\textwidth]{plots/fig1_b.png}
+%         \includegraphics[width=0.48\textwidth]{plots/fig1_b.png}
 %     }
 %     \subfigure[]{
-%         \includegraphics[width=0.45\textwidth]{plots/fig1_c.png}
+%         \includegraphics[width=0.48\textwidth]{plots/fig1_c.png}
 %     }
 %     \subfigure[]{
-%         \includegraphics[width=0.45\textwidth]{plots/fig1_d.png} 
+%         \includegraphics[width=0.48\textwidth]{plots/fig1_d.png} 
 %     }
 %     \caption{Bar chart of the discrete attributes
 %     (b): counting of ratings frequencies;
@@ -115,30 +115,30 @@ Finally, as indicated in Fig.1.1(d), an analysis of the \texttt{genres} variable
 \begin{figure}[H]
     \centering
     % First subfigure
-    \begin{subfigure}{0.45\textwidth}
+    \begin{subfigure}{0.48\textwidth}
         \includegraphics[width=\textwidth]{plots/fig1_a.png}
         \caption{Counting of the title types frequencies} %  combined with the canHaveEpisodes variable
         \label{fig:sub1}
     \end{subfigure}
     \hfill
     % Second subfigure
-    \begin{subfigure}{0.45\textwidth}
+    \begin{subfigure}{0.48\textwidth}
         \includegraphics[width=\textwidth]{plots/fig1_b.png}
         \caption{Counting of ratings frequencies}
         \label{fig:sub2}
     \end{subfigure}
     
     % Third subfigure
-    \begin{subfigure}{0.45\textwidth}
+    \begin{subfigure}{0.48\textwidth}
         \includegraphics[width=\textwidth]{plots/fig1_c.png}
         \caption{Counting of the adult and non-adult per type}
         \label{fig:sub3}
     \end{subfigure}
     \hfill
     % Fourth subfigure
-    \begin{subfigure}{0.45\textwidth}
+    \begin{subfigure}{0.48\textwidth}
         \includegraphics[width=\textwidth]{plots/fig1_d.png}
-        \caption{Top 3 genres according to the titleType}
+        \caption{types per genre}
         \label{fig:sub4}
     \end{subfigure}
     
